Sat Feb 21 11:12:08 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* missing/os2.c, missing/x68.c: typo fix.  pointed out by greentea.

Fri Feb 20 19:11:20 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/ostruct.rb (OpenStruct#initialize_copy): should not share
	  members.  [ruby-dev:22966]

Fri Feb 20 18:59:47 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* lib/irb/init.rb (IRB::IRB.parse_opts): add -I option to
	  irb. [ruby-dev:39243]

Fri Feb 20 12:55:27 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (pipe_open): fix typo.

	* win32/win32.c (CreateChild): first argument to CreateProcess() must
	  have path, not just basename.

Thu Feb 19 23:24:16 2004  Dave Thomas  <dave@pragprog.com>

	* lib/rdoc/generators/html_generator.rb (Generators::HtmlClass::build_attribute_list):
	  Support visibility modifiers for attributes

Thu Feb 19 22:39:00 2004  Gavin Sinclair <gsinclair@soyabean.com.au>

	* lib/ostruct.rb: documented

Thu Feb 19 22:39:04 2004  NAKAMURA, Hiroshi  <nakahiro@sarion.co.jp>

	* test/rinda/test_rinda.rb: DRb.start_service only once in testsuites.
	  DRb.start_service could handle this.

Thu Feb 19 22:24:04 2004  NAKAMURA, Hiroshi  <nakahiro@sarion.co.jp>

	* lib/soap/mapping/rubytypeFactory.rb: should not dump singleton class.
	  [ruby-dev:22588]
	  c = class << Object.new; class C; self; end; end; SOAPMarshal.dump(c)

Thu Feb 19 18:08:18 2004  Gavin Sinclair <gsinclair@soyabean.com.au>

	* ext/strscan/strscan.c: improved documentation

Thu Feb 19 18:08:18 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/win32.c, win32/win32.h: fixed prototypes.

	* win32/win32.c (wait): same as waitpid() with -1.

Thu Feb 19 02:34:28 2004  Dave Thomas  <dave@pragprog.com>

	* lib/rdoc/markup/simple_markup/preprocess.rb (SM::PreProcess::include_file):
	  Only strip comment markers if all lines start with comments.

Thu Feb 19 03:05:49 2004  Minero Aoki  <aamine@loveruby.net>

	* ext/strscan/strscan.c: StringScanner#restsize is obsolete;